--- a/public/cpanel/css/component.css
+++ b/public/cpanel/css/component.css
@@ -6,6 +6,59 @@
 		box-sizing: border-box;
 }
 
+body {
+    background: #ffffff;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 28px;
+    color: #777777;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+}
+
+label {
+    font-weight: normal;
+    color: #aaaaaa;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: 100%;
+}
+
+.admin-slider h5 {
+
+    font-size: 18px;
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #676767;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+}
+
+a, a:visited {
+    /* color: #ffd544; */
+    text-decoration: none !important;
+    /* outline: 0; */
+}
+
+
+
+footer {
+    background: #252525;
+    color: #ffffff;
+    text-align: center;
+    bottom: 0;
+    position: relative;
+    width: 100%;
+    z-index: 11;
+}
+
 
 img.thumbnail.thumbnail-table {
     width: 150px;
