--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,6 +182,69 @@ p.number-work {
 
 }
 
+#introduction {
+  padding-top: 50px;
+  /* padding-bottom: 80px; */
+  background: #e4552f;
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
+  display: block;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: auto;
+  position: relative;
+  display: -webkit-box;
+}
+
+#workshops {
+  padding-top: 50px;
+  /* padding-bottom: 80px; */
+  background: white;
+  background-size: cover;
+  background-position: center center;
+  color: #e4552f;
+  display: block;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: auto;
+  position: relative;
+  display: -webkit-box;
+}
+
+img.workshop-image {
+  width: 300px;
+  height: 300px;
+}
+
+
+#introduction p {
+  color: white;
+  padding-left: 20px;
+  line-height: normal;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+img.beside-img {
+  width: 100%;
+}
+
+#introduction .col-md-12 {
+
+  padding-left: 0px;
+}
+
+#introduction h2 {
+  font-size: 45px;
+  padding-top: 30px;
+  padding-left: 15px;
+  padding-bottom: 20px;
+}
 footer{
   padding-top: 0px;
   padding-bottom: 0px;
