--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,9 @@ App Starter Template
 http://www.templatemo.com/tm-492-app-starter
 
 */
+
+
+
 img.slider-img {
   height: 80vh;
   width: 100%;
@@ -78,6 +81,7 @@ p.products-description{
   text-align: center;
   font-size: 12px;
   height: 80px;
+  font-weight: 600;
 
 }
 p.products-name {
@@ -86,7 +90,8 @@ p.products-name {
   text-align: center;
   padding-top: 15px;
   height: 86px;
-
+  font-family: 'nunito', sans-serif;
+  line-height: 27px;
 }
 
 
@@ -147,6 +152,7 @@ p.text-work {
 p.number-work {
   color: white;
   font-size: 70px;
+  font-family: 'nunito', sans-serif;
 
 }
 #about{
@@ -198,6 +204,29 @@ p.number-work {
   position: relative;
   display: -webkit-box;
 }
+i.fa.fa-circle {
+  color: #dc532f;
+}
+
+.col-md-7.topic-container {
+  padding-top: 10px;
+}
+
+hr.long-hr {
+  /* border-bottom-color: #dc532f !important; */
+  width: 100%;
+  color: #dc532f;
+  border-top: 4px solid #dc532f;
+}
+.col-md-12.product-container {
+  padding-bottom: 20px;
+}
+
+p.topic-description {
+  font-weight: 600;
+  font-size: 15.5px;
+  text-align: initial;
+}
 
 #workshops {
   padding-top: 50px;
@@ -216,22 +245,36 @@ p.number-work {
   display: -webkit-box;
 }
 
-img.workshop-image {
+img.product-consultant-img {
+  padding-top: 40px;
+  position: absolute;
+  z-index: 100;
   width: 300px;
-  height: 300px;
+  height: 700px;
+}
+
+img.workshop-image {
+  width: 150px;
+  height: 150px;
+}
+p.text-center.topic-name {
+  color: #e2542f;
+  font-size: 40px;
+  text-align: left;
 }
 
 
 #introduction p {
   color: white;
-  padding-left: 20px;
+  padding-left: 35px;
   line-height: normal;
   font-weight: 300;
   font-size: 16px;
 }
 
 img.beside-img {
-  width: 100%;
+  width: 110%;
+  height: 400px;
 }
 
 #introduction .col-md-12 {
@@ -241,9 +284,9 @@ img.beside-img {
 
 #introduction h2 {
   font-size: 45px;
-  padding-top: 30px;
-  padding-left: 15px;
-  padding-bottom: 20px;
+  padding-top: 26px;
+  padding-left: 35px;
+  padding-bottom: 0px;
 }
 footer{
   padding-top: 0px;
@@ -255,7 +298,7 @@ footer{
 .col-md-12.contact-info {
   color: white;
   font-size: 25px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 
@@ -296,7 +339,7 @@ img.logo-position {
 
 body {
 		background: #1c1c1c;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
 		font-weight: 300;
     padding-top: 70px;
@@ -310,14 +353,14 @@ body {
 
 h1,h2,h3,h4,h5,h6,
 .navbar-default, .btn {
-  font-family: 'Unica One', cursive;
+  font-family: 'Nunito', sans-serif;
   font-weight: 400;
 }
 
 
 h1,h2,h3,h4,h5,h6 {
   font-weight: 400;
-  letter-spacing: 1px;
+  letter-spacing: -1px;
 }
 
 h1 {
@@ -330,7 +373,7 @@ h1 {
 
 h2 {
   color: #f0f0f0;
-  font-size: 32px;
+  font-size: 45px;
 }
 
 h3 {
@@ -430,11 +473,20 @@ a:hover, a:active, a:focus {
 }
 p.intro {
   color: black;
-  font-size: 25px;
-  font-weight: 400;
+  font-size: 24px;
+  font-weight: lighter;
   font-style: italic;
   padding-bottom: 15px;
 }
+span.bolder {
+  /* font-size: 18px; */
+  font-weight: 600;
+}
+
+.contact-info {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 
 p {
   color: black;
@@ -613,7 +665,7 @@ p {
 }
 
 .navbar-default .navbar-nav li a {
-    color: #656565;
+  color: #adabb1;
     font-size: 18px;
     font-weight: 500;
     line-height: 50px;
@@ -637,7 +689,7 @@ p {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #1dc9e3;
+  color: #ff5428;
     background-color: transparent;
 }
 
@@ -1166,9 +1218,47 @@ footer p {
   .container {
 	width: 100%;
   }
+  p.text-center.topic-name {
+
+    font-size: 33px;
+
+  }
+}
+
+@media (max-width: 990px) {
+
+  img.product-consultant-img{
+    display: none;
+  }
+
+
+  .col-md-2-4 {
+    width: 50%;
+
+  }
+
+  .col-md-6.consultants {
+
+    height: auto;
+  }
+  .col-md-4.text-right {
+    text-align: center;
+  }
+
+
 }
 
 @media (max-width: 980px) {
+
+
+
+
+
+
+
+  img.product-consultant-img{
+    display: none;
+  }
 
   h1 {
     font-size: 38px;
@@ -1198,6 +1288,17 @@ footer p {
 
 @media (max-width: 768px) {
 
+  .col-md-2-4 {
+    width: 100%;
+
+  }
+  p.products-description {
+
+    font-size: 18px;
+
+  }
+
+
   h1 {
     font-size: 28px;
   }
@@ -1217,6 +1318,26 @@ footer p {
 
 @media (max-width: 767px) {
 
+
+  img.slider-img {
+    height: 60vh;
+    width: 100%;
+  }.slider-container {
+     height: 60vh;
+     margin-top: 4.5%;
+     padding-left: 0px;
+     padding-right: 0px;
+   }.sl-slider-wrapper {
+      height: 60vh !important;
+    }.sl-slider {
+       height: 60vh !important;
+     }#home, #home .overlay {
+        height: 60vh;
+        padding-top: 35px;
+      }
+
+
+
    body {
     padding-top: 0px;
     text-align: center;
@@ -1235,10 +1356,6 @@ footer p {
     line-height: 25px;
   }
 
-  #home, #home .overlay {
-    height: 80vh;
-    padding-top: 35px;
-  }
 
 /*responsive dekanel*/
   img.logo-position {
