--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,7 +60,7 @@ p.consultants-name {
 .col-md-6.consultants {
   margin-top: 40px;
   /* padding-bottom: 50px; */
-  height: 200px;
+      height: 250px;
 }
 
 a.product-link {
@@ -86,10 +86,10 @@ p.products-description{
 }
 p.products-name {
   color: #fad040;
-  font-size: 30px;
+  font-size: 26px;
   text-align: center;
   padding-top: 15px;
-  height: 86px;
+  height: 75px;
   font-family: 'nunito', sans-serif;
   line-height: 27px;
 }
@@ -111,7 +111,8 @@ width: 100px;
 }
 
 .col-md-2-4 {
-  width: 20%;
+  /*width: 20%;*/
+    width: 33.33333333%;
   float: left;
   margin-top: 35px;
   border-right: 3px solid #e4552f;
@@ -141,6 +142,7 @@ p.text-work {
   font-size: 16px;
   line-height: normal;
   padding-top: 15px;
+    font-weight: bold;
 }
 
 .how-we-work{
@@ -170,7 +172,7 @@ p.number-work {
 }
 #consultants{
   padding-top: 20px;
-  padding-bottom: 60px;
+  
   background: #008da5;
 
 }
@@ -261,6 +263,7 @@ p.text-center.topic-name {
   color: #e2542f;
   font-size: 40px;
   text-align: left;
+  font-weight: bold;
 }
 
 
@@ -297,7 +300,7 @@ footer{
 
 .col-md-12.contact-info {
   color: white;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 600;
 }
 
@@ -1401,6 +1404,53 @@ footer p {
 }
 
 @media (max-width: 650px) {
+
+p.consultants-description {
+    color: white;
+    font-size: 13px;
+    text-align: justify;
+    padding-top: 14px;
+}
+
+.section-title {
+    
+    padding-top: 20px;
+   
+}
+
+#about .section-title {
+    padding-top: 40px;
+}
+
+p.products-description {
+    font-size: 14px;
+}
+
+#about, #divider, #screenshot, #pricing, #newsletter {
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.section-title {
+    padding-bottom: 0px;
+}
+
+img.slider-img {
+    height: 30vh;
+    width: 100%;
+  }.slider-container {
+     height: 30vh;
+     margin-top: 7.5%;
+     padding-left: 0px;
+     padding-right: 0px;
+   }.sl-slider-wrapper {
+      height: 30vh !important;
+    }.sl-slider {
+       height: 30vh !important;
+     }#home, #home .overlay {
+        height: 30vh;
+        padding-top: 35px;
+      }
 
   h1 {
     font-size: 28px;
