--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,52 @@ http://www.templatemo.com/tm-492-app-starter
 */
 
 
+p.carousel-text {
+  font-size: 45px;
+  position: absolute;
+  /* top: 0;*/
+  color: white;
+  text-shadow: azure;
+  text-shadow: 2px 2px #000000;
+  width: 400px;
+  word-break: break-word;
+  font-family: 'nunito', sans-serif;
+  line-height: 1;
+}
+
+p.carousel-text.top-right {
+  top: 80px;
+  right: 80px;
+  text-align: left;
+}
+
+p.carousel-text.top-left {
+  top: 80px;
+  left: 80px;
+  text-align: left;
+}
+
+p.carousel-text.bottom-left {
+  bottom: 80px;
+  left: 80px;
+  text-align: left;
+}
+
+p.carousel-text.bottom-right {
+  bottom: 80px;
+  right: 80px;
+  text-align: left;
+}
+
+p.carousel-text.center {
+  top: 40%;
+  left: 36%;
+  text-align: center;
+}
+
+.carousel-image-container {
+  position: relative;
+}
 
 img.slider-img {
   height: 80vh;
@@ -206,6 +252,39 @@ p.number-work {
   position: relative;
   display: -webkit-box;
 }
+
+
+#other-products {
+  padding-top: 50px;
+  /* padding-bottom: 80px; */
+  background: #eaeaea;
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
+  display: block;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: auto;
+  position: relative;
+  display: -webkit-box;
+}
+
+#other-products h2 {
+  color: #008da5;
+  font-size: 35px;
+}
+
+#other-products p.products-name {
+  color: #008da5;
+
+}
+
+.col-md-4.products-container {
+  margin-bottom: 25px;
+  border-left: 4px solid white;
+}
 i.fa.fa-circle {
   color: #dc532f;
 }
@@ -251,7 +330,7 @@ img.product-consultant-img {
   padding-top: 40px;
   position: absolute;
   z-index: 100;
-  width: 300px;
+  width: 260px;
   height: 700px;
 }
 
@@ -261,9 +340,11 @@ img.workshop-image {
 }
 p.text-center.topic-name {
   color: #e2542f;
-  font-size: 40px;
+  font-size: 35px;
   text-align: left;
   font-weight: bold;
+  font-family: nunito, sans-serif;
+  line-height: 1;
 }
 
 
@@ -286,7 +367,7 @@ img.beside-img {
 }
 
 #introduction h2 {
-  font-size: 45px;
+  font-size: 40px;
   padding-top: 26px;
   padding-left: 35px;
   padding-bottom: 0px;
@@ -1321,6 +1402,31 @@ footer p {
 
 @media (max-width: 767px) {
 
+  p.carousel-text.top-left {
+    top: 30px;
+    left: 40px;
+    text-align: left;
+  }
+  p.carousel-text {
+    font-size: 20px;
+    width: 200px;
+  }
+  p.carousel-text.top-right {
+    top: 30px;
+    right: 0px;
+    text-align: left;
+  }
+  p.carousel-text.bottom-right {
+    bottom: 10px;
+    right: 0px;
+    text-align: left;
+  }
+
+  p.carousel-text.center {
+    top: 36%;
+    left: 23%;
+    text-align: center;
+  }
 
   img.slider-img {
     height: 60vh;
